<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/ic_inicio"
        android:title="@string/nav_inicio" />
    <item
        android:id="@+id/nav_buscar"
        android:icon="@drawable/ic_buscar"
        android:title="@string/nav_buscar" />
    <item
        android:id="@+id/nav_publicar"
        android:icon="@drawable/ic_publicar"
        android:title="@string/nav_publicar" />
    <item
        android:id="@+id/nav_actividad"
        android:icon="@drawable/ic_corazon_borde"
        android:title="@string/nav_actividad" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_perfil"
        android:title="@string/nav_perfil" />
</menu>
